--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           📅 근무표 / 캘린더 확인
         </a>
 
-        <a href="notices.html" class="btn btn-secondary">
+        <a href="notice.html" class="btn btn-secondary">
           📢 공지사항 확인
         </a>
 
