--- a/schecule.html
+++ b/schecule.html
@@ -94,10 +94,11 @@
 
       <!-- 🔹 Google 스프레드시트 예시 -->
       <!-- 공유 설정: "링크가 있는 모든 사용자 → 보기"로 변경해둬야 함 -->
-      <iframe
-        src="https://docs.google.com/spreadsheets/d/문서ID여기/embed?widget=true&amp;headers=false"
-        allowfullscreen
-      ></iframe>
+      
+      <iframe src="https://calendar.google.com/calendar/embed?src=8e1adc1d42e690159dacfadbcd67bbfd0861b0f4f3f575566306a0a7688f6b4e%40group.calendar.google.com&ctz=Asia%2FSeoul" 
+               style="border: 0" width="800" height="600" frameborder="0" scrolling="no"
+               allowfullscreen>
+    </iframe>
 
       <!-- 🔹 Google 캘린더로 쓸 경우 예시 (위 iframe 주석 처리하고 교체하기) -->
       <!--
