--- a/notice.html
+++ b/notice.html
@@ -130,18 +130,22 @@
       <div class="notice-header">
         <div class="notice-title">
           <span class="tag">필독</span>
-          12월 주말 근무 가능일 입력 안내
+          [공통] 12월 1주차 공지사항
         </div>
         <div class="notice-meta">
-          2025-12-01 · 운영팀
+          2025-12-01 · [공통]
         </div>
       </div>
       <div class="notice-body">
-12월 주말(토·일) 근무 가능일을 이번 주 수요일까지 모두 입력해주세요.
-
-- 입력 위치: 근무표 페이지 상단 [근무 가능 체크] 시트
-- 오픈/마감 모두 가능하면 둘 다 표시
-- 스케줄 확정 후 개인별로 다시 공지드립니다.
+        1. 감자 튀김용 기름은 콩기름으로 변경
+        2. ⭐️ 페코리노 치즈가 이전 것으로 변경
+               치즈량 50% + 맹물로 만드는 것으로 변경
+        3. 치킨 빠에야, 피클 동반 잊지 않기
+        4. 양갈비 마리네이드 안함
+        대신 꼭 오븐 넣을 때 밑간 해서 넣기 (소금후추올리브)
+        5. ⭐️먹물빠에야 밑에 긁어먹어야하는 이유 설명
+              : 육수가 가라앉아 눌러붙은것을 반드시 같이 섞어서 먹어야 함
+        6. 부엌 창문은 고리를 체결해서 윗부분을 열어두는 형태로 쓰기
       </div>
     </article>
 
@@ -149,18 +153,34 @@
     <article class="notice notice--info">
       <div class="notice-header">
         <div class="notice-title">
-          겨울 시즌 뱅쇼 준비 안내
+        [공통] 11월 5주차 공지사항
         </div>
         <div class="notice-meta">
-          2025-11-28 · 주방
+          2025-11-28 · 공통
         </div>
       </div>
       <div class="notice-body">
-이번 주말부터 뱅쇼 판매가 시작됩니다.
-
-- 레시피: 노션 레시피 페이지 참고
-- 시나몬 스틱, 오렌지 슬라이스 미리 세팅
-- 서빙용 컵 수량 매장 마감 전 다시 체크해주세요.
+        1. 문어구이 ⇒ 올리브오일 살짝만 두르기
+        (접시에 기름 다 남고, 엑스트라버진 소모량이 너무 많음)
+        2. 기름 묻은 그릇 치울 때
+        손님이 쓴 휴지 위에다 올려서 수거해오기
+        웬만하면 휴지에 다 먹여서 쓰레기로 버리기(맨홀에 기름 한번 퍼냈음)
+        3. 양갈비, 빠에야 짜다는 컴플레인
+        ⇒ 의도하지 않게 소금이 많이 들어갔을 것으로 추정
+            평소대로 넣되, 뭉치지 않도록 주의 / 밥도 정량 들어가도록 주의
+        * 차라리 조금 싱거우면 간을 추가하면 되는데 짜면 돌이키기 어려움…
+        4. 브레이크 타임 에너지 절약 실천
+        - 모니터, 태블릿 꺼두기(왼쪽 안에 버튼 꾹 누르면 됌)
+        - 식세기 전원 끄고 뚜껑닫아놓기(세척된건 빼놓기)
+        - 건전지 쓰는 트리는 꺼두기
+        5. 주말 → 평일 청소상태 미흡
+        유리 깨진거 짱 박아둔거 안치움
+        화장실 변기 오염
+        모자르는 음료 안채움
+        ⇒ 청소 및 정리정돈, 비품채우기 신경쓰도록 
+        6. 일요일 점심 식자재 재고량 체크*
+        브레이크 전에 체크시트 보고 부족한것 체크
+        * 일요일 저녁 소진량 염두하고 넉넉하게 준비할 수 있도록
       </div>
     </article>
 
