--- a/address.html
+++ b/address.html
@@ -238,7 +238,7 @@
       <nav>
         <a href="index.html">메인</a>
         <a href="schedule.html">근무표</a>
-        <a href="notices.html">공지사항</a>
+        <a href="notice.html">공지사항</a>
         <a href="address.html" class="active">Contact / 안내</a>
       </nav>
     </div>
