--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
         </a>
 
         <!-- 필요하면 나중에 메뉴 하나 더 추가 -->
-        <!-- <a href="#" class="btn btn-secondary">📘 매뉴얼 / 레시피</a> -->
+        <a href="address.html" class="btn btn-secondary">
+            📞 연락처
+        </a> 
       </div>
 
       <div class="small">
