--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
         </a>
 
         <!-- 필요하면 나중에 메뉴 하나 더 추가 -->
-        <a href="address.html" class="btn btn-secondary">
+        <!--<a href="address.html" class="btn btn-secondary">
             📞 연락처
-        </a> 
+        </a> -->
       </div>
 
       <div class="small">
