--- a/notice.html
+++ b/notice.html
@@ -130,6 +130,44 @@
         <div class="notice-header">
           <div class="notice-title">
             <span class="tag">필독</span>
+            [공통] 12월 3주차 공지사항
+          </div>
+          <div class="notice-meta">
+            2025-12-14 · [공통]
+          </div>
+        </div>
+        <div class="notice-body">
+            1. 레몬 / 로즈마리 준비방법 변경
+                1) 보관방법 
+                    - 매일 보관통 오전에 한번 세척
+                    - 로즈마리 물 갈아주기 (얼음 1-2개 넣기)
+                    * 물이 오래되면 신선도가 떨어짐, 얼음물이 도움이 됨 
+                2) 레몬 슬라이스, 레몬 조각 준비량 각각 1개씩
+                    - 소비량이 적어 한개씩만 잘라두는 것으로 변경
+
+            2. 조개파스타 레시피 변경 (현재 버전)
+                1) **슬라이스** 마늘, **엔초비** 2개 넣고 볶기
+                2) 바지락, 삶은 백합 넣고 더 볶기
+                3) 조개육수 2국자, 페퍼, 후추, 파슬리 넣고 끓이기
+                4) 보글거리면 면 넣고 만테까레
+                * 오일 추가 안함, 조개육수만 씀, 국물이 면에 졸여져서 면이 밍밍하지 않도록
+                대신 마지막에 국물이 남아있을 정도로 육수 넣는 양 조절필요
+                소금간은 마지막에 필요 시 아주 소량만 (엔초비 때문에 짜다)
+
+            3. 먹물빠에야 Prep 중요성
+                - 주말간 먹물 팬 3~4개, bowl 에 4인분 말아서 사용함
+                → 빠에야 팬 준비한거 먼저 사용
+                → 다 쓰면 bowl 에 있는거 1인분씩 덜어서 씀
+                → 배달도 소분한거 냄비에 바로 옮겨서 조리 가능
+                * 빠에야가 빨리 빠져주니 화구 혼잡도가 매우 완화되었음
+        </div>
+      </article>
+
+    <!-- 🔥 최신 공지 (위에 계속 추가) -->
+    <article class="notice notice--info">
+        <div class="notice-header">
+          <div class="notice-title">
+            <span class="tag">필독</span>
             [공통] 12월 2주차 공지사항
           </div>
           <div class="notice-meta">
@@ -155,9 +193,9 @@
            *꿀가지는 공정을 줄일 수 있는 방법 연구 중
         </div>
       </article>
-      
+
     <!-- 🔥 최신 공지 (위에 계속 추가) -->
-    <article class="notice notice--urgent">
+    <article class="notice notice--info">
       <div class="notice-header">
         <div class="notice-title">
           <span class="tag">필독</span>
