--- a/schedule.html
+++ b/schedule.html
@@ -95,7 +95,7 @@
       <!-- 🔹 Google 스프레드시트 예시 -->
       <!-- 공유 설정: "링크가 있는 모든 사용자 → 보기"로 변경해둬야 함 -->
       
-      <iframe src="https://calendar.google.com/calendar/embed?src=8e1adc1d42e690159dacfadbcd67bbfd0861b0f4f3f575566306a0a7688f6b4e%40group.calendar.google.com&ctz=Asia%2FSeoul" 
+      <iframe src="https://calendar.google.com/calendar/embed?src=8e1adc1d42e690159dacfadbcd67bbfd0861b0f4f3f575566306a0a7688f6b4e%40group.calendar.google.com&ctz=Asia%2FSeoul&mode=AGENDA" 
                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"
                allowfullscreen>
       </iframe>
